Closed
      
        Bug 1190316
      
      
        Opened 10 years ago
          Closed 10 years ago
      
        
    
  
Fullscreen transition applied to all screens
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
        RESOLVED
        FIXED
        
    
  
        
            mozilla43
        
    
  
People
(Reporter: beta, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
| 2.33 KB,
          patch         | roc
:
              
              review+ Sylvestre
:
              
              approval-mozilla-aurora+ | Details | Diff | Splinter Review | 
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0
Build ID: 20150802030218
Steps to reproduce:
1, Open Firefox Nightly on my second screen
2, Watch a youtube video (ie https://www.youtube.com/watch?v=UCieWwIX1Ig ) and press fullscreen button
3, Expect video to maximise on my second monitor
Actual results:
Both screens go through a lengthy “blink” transition
Expected results:
Expected just the second screen to play this transition.
| Reporter | ||
| Updated•10 years ago
           | 
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
| Comment 1•10 years ago
           | ||
Confirmed on Fedora 22 KDE with latest nightly. It doesn't matter on which monitor the video goes fullscreen, the other monitor always plays the same animation.
Blocks: 1121280
Status: UNCONFIRMED → NEW
Component: Untriaged → Audio/Video
Ever confirmed: true
Product: Firefox → Core
Version: 42 Branch → Trunk
| Updated•10 years ago
           | 
          status-firefox42:
          --- → affected
| Updated•10 years ago
           | 
Component: Audio/Video → Audio/Video: Playback
| Assignee | ||
| Comment 2•10 years ago
           | ||
Are you both using KDE?
Component: Audio/Video: Playback → Widget: Gtk
| Reporter | ||
| Comment 3•10 years ago
           | ||
For me, gnome-flashback, which is Gnome 3 with Gnome 2 behaviours.
| Assignee | ||
| Comment 4•10 years ago
           | ||
Sorry that I didn't test it with multiple monitors.
Assignee: nobody → quanxunzhen
        Attachment #8646762 -
        Flags: review?(roc)
        Attachment #8646762 -
        Flags: review?(roc) → review+
| Assignee | ||
| Comment 5•10 years ago
           | ||
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/009a2d6aa52c3fa1bd78462654234b27ed0a6636
changeset:  009a2d6aa52c3fa1bd78462654234b27ed0a6636
user:       Xidorn Quan <quanxunzhen@gmail.com>
date:       Thu Aug 13 08:53:53 2015 +1000
description:
Bug 1190316 - Apply fullscreen transition on only the target monitor. r=roc
| Assignee | ||
| Comment 6•10 years ago
           | ||
Comment on attachment 8646762 [details] [diff] [review]
patch
Approval Request Comment
[Feature/regressing bug #]: bug 1160014 which introduced the transition
[User impact if declined]: the transition will cover all monitors on Linux
[Describe test coverage new/current, TreeHerder]: n/a
[Risks and why]: no risk, the fix is simple and straightforward
[String/UUID change made/needed]: n/a
        Attachment #8646762 -
        Flags: approval-mozilla-aurora?
| Comment 7•10 years ago
           | ||
Status: NEW → RESOLVED
Closed: 10 years ago
          status-firefox43:
          --- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
| Comment 9•10 years ago
           | ||
Comment on attachment 8646762 [details] [diff] [review]
patch
Taking it as we will have more attention on the GNU/Linux release with the gtk3 release.
"[Risks and why]: no risk, the fix is simple and straightforward"
I don't agree with this evaluation of the risk. Every patch brings some risks and this one is no different...
        Attachment #8646762 -
        Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Comment 10•10 years ago
           | ||
| Updated•10 years ago
           | 
QA Whiteboard: [good first verify]
          You need to log in
          before you can comment on or make changes to this bug.
        
Description
•