Bug 1190316 - Apply fullscreen transition on only the target monitor. r=roc, a=sledru